# KefTrade

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml  requirements.lock.txt  requirements.txt
apps/api/app/: db.py  main.py  observability.py  settings.py
apps/api/app/brokers/: __init__.py  alpaca_paper.py  base.py
apps/api/app/cli/: __init__.py  broker.py  (+5 more)
apps/api/tests/: test_alpaca_provider.py  test_alpha_discovery.py  test_alpha_validation.py  test_automated_scientific_reporting.py  test_backtester.py  test_backtester_session_close.py  test_binance.py  test_broker_observability.py  test_broker_worker_healthcheck.py  test_browser_notification_safety.py  test_campaign_repair.py  test_candidate_lifecycle.py  test_daily_research_reports.py  test_deeper_observations.py  test_deployment_management.py  test_edge_discovery.py  test_elite_consistency_gate.py  test_elite_portfolio_activation.py  test_elite_portfolio_builder.py  test_elite_portfolio_repository.py  test_elite_portfolio_schema.py  test_elite_replay_outcomes.py  test_elite_shadow_replay.py  test_evidence_alerts.py  test_evidence_drift_schema.py  test_explainable_risk.py  test_family_registry.py  test_features.py  test_hypothesis_registry_fields.py  test_intraday_dataset.py  test_intraday_dataset_snapshot.py  test_intraday_family_library.py  test_intraday_features.py  test_intraday_session.py  test_mission_control.py  test_multi_generation_evolution.py  test_orb_strategy.py  test_paper_trading.py  test_phase10_broker_safety.py  test_phase_12_4_analysis.py  (+22 more)
(+369 files in other folders)
